History of this buildout
========================

4.8 (unreleased)
----------------

- Use collective.emaillogin = 1.2.
  [maurits]

- pwreset_action: use userid as login name and make it lower case.
  [maurits]

- Make the in_factory field of agenda item invisible.  It is not meant
  for end users.
  [maurits]


4.7 (2012-02-07)
----------------

- Added missing Dutch translation.
  [maurits]


4.6 (2012-02-02)
----------------

- Merged 3.45 changes.
  [maurits]


4.5 (2012-01-23)
----------------

- Let varnish simply listen on all IP addresses.
  [maurits]


4.4 (2012-01-23)
----------------

- Add conf option varnish_host in buildout to set on which ip or host
  varnish listens.
  [maurits]

- Do not fail in the main template when there is not show_linkedin
  property.
  [maurits]


4.3 (2012-01-20)
----------------

- Merged 3.30-3.44 changes.
  [maurits]


4.2 (2011-11-17)
----------------

- Fixed AttributeError when deleting a normal file from a meeting.
  Normal files do not have a contains_pdf method.
  [maurits]


4.1 (2011-10-27)
----------------

- Use plone.recipe.plone 3.1.7-zest-1 that knows where to get
  ZopeVersionControl-0.3.4.tar.gz.  If you get "Error: Not a
  recognized archive type" when running bin/buildout then remove that
  old ZopeVersionControl tarball and try again.
  [maurits]

- Fixed Unauthorized error when displaying a list of relatedDocuments
  that the user does not have access to.  (Merged from maintenance branch.)
  [maurits]


4.0 (2011-10-21)
----------------

- Removed bin/backup as this is not useful for RelStorage.
  [maurits]

- Restructure buildout configs to match the setup of LNE and use
  RelStorage.  No more zeoserver and zeoclient.
  [maurits]


3.45 (2012-02-02)
-----------------

- Avoid ValueError when filling in wrong email address in the password
  reset form.
  [maurits]


3.44 (2012-01-20)
-----------------

- Newer supervisor, using unix socket.
  [maurits]


3.43 (2012-01-20)
-----------------
