@@ -4,6 +4,11 @@ History of this buildout
 4.8 (unreleased)
 ----------------
 
+- When saving a meeting that is still in the initial (new) state,
+  reset the list of invitees before rebuilding it.  This way we can
+  correct mistakes for new meetings.
+  [maurits]
+
 - Use collective.emaillogin = 1.2.
   [maurits]
 
